--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,11 @@
-
-
-# C++ project
+# Enable C++ support
 language: cpp
+# Compiler selection
+compiler:
+  - clang
+  - gcc
+# Build steps
+script:
+  - mkdir build
+  - cd build
+
