--- a/.travis.yml
+++ b/.travis.yml
@@ -2,33 +2,9 @@
 language: cpp
 # Compiler selection
 
-
-matrix:
-  include:
-
-  - os: linux
-    compiler: gcc
-    env: COMPILER=g++-4.9
-    addons:
-      apt:
-        sources: ['ubuntu-toolchain-r-test']
-        packages: g++-4.9
-
-  - os: linux
-    compiler: gcc
-    env: COMPILER=g++-5
-    addons:
-      apt:
-        sources: ['ubuntu-toolchain-r-test']
-        packages: g++-5
-
-  - os: linux
-    compiler: gcc
-    env: COMPILER=g++-6
-    addons:
-      apt:
-        sources: ['ubuntu-toolchain-r-test']
-        packages: g++-6
+compiler:
+  - clang
+  - gcc-4.9
 script:
   - cd build
   - $CXX -std=c++11 test.cpp
