--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,17 @@ language: cpp
 compiler:
   - clang
   - gcc
+addons:
+  apt:
+    sources:
+    # add PPAs with more up-to-date toolchains
+    - ubuntu-toolchain-r-test
+    - llvm-toolchain-precise-3.6
+    packages:
+    # install toolchains
+    - gcc-5
+    - g++-5
+    - clang-3.6
 script:
   - cd build
   - $CXX -std=c++11 test.cpp
