--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
-# Enable C++ support
+# Use new trusty images, should yield newer compilers and packages
+sudo: required
+dist: precise
 language: cpp
-# Compiler selection
 
-    
 matrix:
   include:
     - compiler: gcc
@@ -39,6 +39,10 @@ matrix:
           packages:
             - clang-3.7
       env: COMPILER=clang++-3.7
+
+before_install:
+  - sudo apt-get update -qq
+- sudo apt-get install -y libopencv-dev
 script:
   - cd build
   - $CXX -std=c++11 test.cpp
