--- a/.travis.yml
+++ b/.travis.yml
@@ -45,6 +45,7 @@ before_install:
   - sudo apt-get install -y libopencv-dev
 script:
   - cd build
+  - $CXX --version
   - $CXX -std=c++11 test.cpp
 
 
