--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,22 @@ language: cpp
 dist: trusty
 sudo: required
 
-compiler:
-  - clang
-  - gcc
+
 matrix:
   include:
+  - os: linux
+    compiler: gcc
+    env: COMPILER=g++-4.9
+    addons:
+      apt:
+        sources: ['ubuntu-toolchain-r-test']
+        packages: g++-4.8
+    before_script:
+      - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+      - sudo apt-get update -q
+      - sudo apt-get install g++-4.8 -y
+      - cd build
+      - g++-4.8 -std=c++11 test.cpp
   - os: linux
     compiler: gcc
     env: COMPILER=g++-4.9
@@ -34,6 +45,20 @@ matrix:
       - sudo apt-get install g++-5 -y
       - cd build
       - g++-5 -std=c++11 test.cpp
+      
+  - os: linux
+    compiler: gcc
+    env: COMPILER=g++-6
+    addons:
+      apt:
+        sources: ['ubuntu-toolchain-r-test']
+        packages: g++-6
+    before_script:
+      - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+      - sudo apt-get update -q
+      - sudo apt-get install g++-6 -y
+      - cd build
+      - g++-6 -std=c++11 test.cpp
 
 script: 
   - $CXX --version
