--- a/.travis.yml
+++ b/.travis.yml
@@ -72,7 +72,6 @@ matrix:
     before_script:
       - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
       - sudo apt-get update -q
-      - sudo apt-get install clang++-3.6 -y
       - cd build
       - clang++-3.6 -std=c++11 test.cpp
       
@@ -88,7 +87,6 @@ matrix:
     before_script:
       - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
       - sudo apt-get update -q
-      - sudo apt-get install clang++-3.7 -y
       - cd build
       - clang++-3.7 -std=c++11 test.cpp
       
@@ -104,9 +102,13 @@ matrix:
     before_script:
       - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
       - sudo apt-get update -q
-      - sudo apt-get install clang++-3.8 -y
       - cd build
       - clang++-3.8 -std=c++11 test.cpp
+  - os: osx
+    osx_image: beta-xcode6.1
+    before_script:
+      - cd build
+      - clang++ -std=c++11 test.cpp
 
 script: 
   - $CXX --version
