--- a/.travis.yml
+++ b/.travis.yml
@@ -60,11 +60,22 @@ matrix:
       - cd build
       - g++-6 -std=c++11 test.cpp
       
-  - os: osx
-    osx_image: beta-xcode6.1
-    before_script:
-      - cd build
-      - clang++ -std=c++11 test.cpp
-
+  - os: linux		
+    compiler: clang		
+    env: COMPILER=clang++-3.6		
+    addons:		
+      apt:		
+        sources:		
+          - ubuntu-toolchain-r-test		
+          - llvm-toolchain-precise-3.6		
+        packages: clang-3.6		
+    before_script:		
+      - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y		
+      - sudo apt-get update -q		
+      - sudo apt-get install clang++-3.6	 clang-3.6 lldb-3.6 llvm-3.6 -y	
+      - cd build		
+      - clang++-3.6 -std=c++11 test.cpp		
+        		
+  
 script: 
   - $CXX --version
