--- a/.travis.yml
+++ b/.travis.yml
@@ -60,21 +60,28 @@ matrix:
       - cd build
       - g++-6 -std=c++11 test.cpp
       
-  - os: linux		
-    compiler: clang		
-    env: COMPILER=clang++-3.6		
-    addons:		
-      apt:		
-        sources:		
-          - ubuntu-toolchain-r-test		
-          - llvm-toolchain-precise-3.6		
-        packages: clang-3.6		
-    before_script:		
-      - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y		
-      - sudo apt-get update -q		
-      - sudo apt-get install clang++-3.6	 clang-3.6 lldb-3.6 llvm-3.6 -y	
-      - cd build		
-      - clang++-3.6 -std=c++11 test.cpp		
+    - os: linux
+      compiler: clang
+      env: COMPILER=clang++
+
+    - os: linux
+      compiler: clang
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.5']
+          packages: ['clang-3.5']
+      env: COMPILER=clang++-3.5
+      before_script:
+        - cd build
+        - clang++ -std=c++11 test.cpp
+
+    - os: linux
+      compiler: clang
+      addons:
+        apt:
+          sources: ['ubuntu-toolchain-r-test', 'llvm-toolchain-precise-3.6']
+          packages: ['clang-3.6']
+      env: COMPILER=clang++-3.6
         		
   
 script: 
