--- a/.travis.yml
+++ b/.travis.yml
@@ -63,6 +63,9 @@ matrix:
   - os: linux
     compiler: clang
     env: COMPILER=clang++
+    before_script:
+      - cd build
+      - clang++ -std=c++11 test2.cpp
 
   - os: linux
     compiler: clang
@@ -73,6 +76,7 @@ matrix:
     env: COMPILER=clang++-3.5
     before_script:
       - cd build
+      - clang++ -std=c++11 test2.cpp
       - clang++ -std=c++11 test.cpp
 
   - os: linux
@@ -84,6 +88,7 @@ matrix:
     env: COMPILER=clang++-3.6
     before_script:
       - cd build
+      - clang++ -std=c++11 test2.cpp
       - clang++ -std=c++11 test.cpp
         		
   
