--- a/.travis.yml
+++ b/.travis.yml
@@ -77,6 +77,7 @@ matrix:
     before_script:
       - cd build
       - clang++-3.5 -std=c++11 test2.cpp
+      - if [ "$CXX" == "clang++" ]; then export CXX="clang++-3.5"; fi
       - clang++-3.5 --version
 
   - os: linux
@@ -89,6 +90,7 @@ matrix:
     before_script:
       - cd build
       - clang++-3.6 -std=c++11 test2.cpp
+      - if [ "$CXX" == "clang++" ]; then export CXX="clang++-3.6"; fi
       - /usr/bin/clang++-3.6  --version
         		
   
